--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <label>Show step lines:
       <input id="showSteps" type="checkbox" checked>
     </label>
+	<label>Spinner speed:
+  <input id="spinSpeed" type="number" min="0.01" max="0.5" step="0.01" value="0.05">
+</label>
+
     <div style="display:flex;gap:8px;justify-content:center;margin-top:10px">
       <button id="startBtn">Start Fake Update</button>
     </div>
@@ -85,7 +89,8 @@ const menu = document.getElementById('menu');
 const startBtn = document.getElementById('startBtn');
 const durationInput = document.getElementById('duration');
 const fullscreenInput = document.getElementById('fullscreen');
-const showStepsInput = document.getElementById('showSteps');
+const spinSpeedInput = document.getElementById('spinSpeed');
+let spinSpeed = 0.05;
 
 const updateScreen = document.getElementById('updateScreen');
 const spinnerCanvas = document.getElementById('spinner');
@@ -109,26 +114,52 @@ const W = spinnerCanvas.width, H = spinnerCanvas.height;
 const cx = W/2, cy = H/2, radius = Math.min(W,H)/2 - 6;
 const DOT_COUNT = 12;
 let spinAngle = 0;
+let regroupPhase = 0; // 0 = normal, 1 = regroupement, 2 = redéploiement
+let regroupProgress = 0;
+function drawSpinner() {
+  ctx.clearRect(0, 0, W, H);
 
-function drawSpinner(){
-  ctx.clearRect(0,0,W,H);
-  for(let i=0;i<DOT_COUNT;i++){
-    const angle = (i/DOT_COUNT)*Math.PI*2 + spinAngle;
-    const phase = (i/DOT_COUNT);
-    const lead = (spinAngle/(Math.PI*2)) %1;
-    let offset = (phase-lead+2)%1;
-    let fade = Math.max(0.12,1-offset*1.6);
-    let dotRadius = 3*(0.5+fade*0.5);
-    const x = cx + Math.cos(angle)*radius;
-    const y = cy + Math.sin(angle)*radius;
+  for (let i = 0; i < DOT_COUNT; i++) {
+    const baseAngle = (i / DOT_COUNT) * Math.PI * 2;
+    let angle = baseAngle + spinAngle;
+
+    let r = radius;
+    if (regroupPhase === 1) {
+      // Regroupement vers le haut (progress de 0 à 1)
+      r = radius * (1 - 0.7 * regroupProgress);
+      angle = -Math.PI / 2 + (baseAngle - Math.PI / 2) * (1 - regroupProgress);
+    } else if (regroupPhase === 2) {
+      // Redéploiement progressif
+      r = radius * (0.3 + 0.7 * regroupProgress);
+      angle = -Math.PI / 2 + (baseAngle - Math.PI / 2) * regroupProgress;
+    }
+
+    const x = cx + Math.cos(angle) * r;
+    const y = cy + Math.sin(angle) * r;
+
+    // Style du point
+    const lead = (spinAngle / (Math.PI * 2)) % 1;
+    const phase = (i / DOT_COUNT);
+    let offset = (phase - lead + 2) % 1;
+    let fade = Math.max(0.12, 1 - offset * 1.6);
+    let dotRadius = 3 * (0.5 + fade * 0.5);
+
     ctx.beginPath();
-    ctx.fillStyle = `rgba(255,255,255,${0.18+fade*0.82})`;
-    ctx.arc(x,y,dotRadius,0,Math.PI*2);
+    ctx.fillStyle = `rgba(255,255,255,${0.18 + fade * 0.82})`;
+    ctx.arc(x, y, dotRadius, 0, Math.PI * 2);
     ctx.fill();
   }
 }
 
-function spinnerLoop(){ spinAngle+=0.05; drawSpinner(); animReq=requestAnimationFrame(spinnerLoop); }
+
+function spinnerLoop() {
+  const mod = 0.7 + 0.3 * Math.cos(spinAngle); // varie entre 0.4 et 1.0
+  spinAngle += spinSpeed * mod; 
+
+  drawSpinner();
+  animReq = requestAnimationFrame(spinnerLoop);
+}
+
 
 // --- Progression ---
 function startProgress(durationSec){
@@ -249,6 +280,7 @@ startBtn.addEventListener('click',()=>{
   line1.textContent='Installing updates...';
   line2.textContent='';
   line3.textContent='';
+  spinSpeed = Number(spinSpeedInput.value) || 0.05;
   enterFullscreen();
   startProgress(Number(durationInput.value)||10);
 });
