--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ const startBtn = document.getElementById('startBtn');
 const durationInput = document.getElementById('duration');
 const fullscreenInput = document.getElementById('fullscreen');
 const spinSpeedInput = document.getElementById('spinSpeed');
+const showStepsInput = document.getElementById('showSteps');
+
 let spinSpeed = 0.05;
 
 const updateScreen = document.getElementById('updateScreen');
